# CodeCenter

./: .gitignore  IMPLEMENTATION_STATUS.md  index.html  package-lock.json  package.json  prototype.html  tailwind.config.js
.claude/: settings.json
docs/: FRONTEND_ARCHITECTURE.md  IMPLEMENTATION_PLAN_CHAT_INTERACTION.md  POLLING_IMPLEMENTATION_PLAN.md  PRD.md  TECHNICAL_DESIGN.md  UI_OPTIMIZATION_PLAN.md
scripts/: dev.ps1  dev.sh  generate-icns.py  generate-icons.py  verify.ps1  verify.sh
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  main.rs  state.rs
src-tauri/src/commands/: chat.rs  mod.rs  session.rs  system.rs
src-tauri/src/models/: mod.rs  status.rs
src-tauri/src/monitor/: discovery.rs  mod.rs  status_detector.rs  watcher.rs
src-tauri/src/storage/: config.rs  mod.rs
src/components/: Dashboard.tsx  SessionCard.tsx  StatusBar.tsx
src/components/common/Button/: Button.tsx
src/components/common/LoadingSpinner/: LoadingSpinner.tsx
src/components/common/StatusBadge/: StatusBadge.tsx
src/features/sessions/: index.ts
src/features/sessions/components/SessionCard/: SessionCard.tsx
src/features/sessions/store/: useSessionStore.ts
src/lib/: queryClient.ts
src/stores/: uiStore.ts
src/types/: session.ts
src/utils/: cn.ts  formatters.ts  path-utils.ts  project-icons.tsx
