[package]
name = "codeagent-dashboard"
version = "0.1.0"
description = "A Tauri App for managing Code Agent sessions"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = ["macos-private-api"] }
tauri-plugin-shell = "2.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
notify = "6"
async-trait = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
dirs = "5"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.27", features = ["signal", "process", "fs"] }

[dev-dependencies]
tempfile = "3"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
